--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "qwique",
+  "name": "Haraf",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "dev": "nodemon app.js"
   },
   "keywords": [],
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^7.0.1",
+    "morgan": "^1.10.0",
     "winston": "^2.4.0",
     "winston-mongodb": "^3.0.0"
   },
