--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "lodash": "^4.17.21",
     "mongoose": "^7.0.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.8",
+    "otp-generator": "^4.0.0",
     "winston": "^2.4.0",
     "winston-mongodb": "^3.0.0"
   },
