--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "mongoose": "^7.0.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.8",
+    "paystack": "^2.0.1",
+    "paystack-api": "^2.0.6",
     "otp-generator": "^4.0.0",
     "winston": "^2.4.0",
     "winston-mongodb": "^3.0.0"
