--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "cloudinary": "^1.27.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
@@ -26,6 +27,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^7.0.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "nodemailer": "^6.7.8",
     "paystack": "^2.0.1",
     "paystack-api": "^2.0.6",
