--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "paystack-api": "^2.0.6",
     "soft-delete-mongoose-plugin": "^1.1.3",
     "winston": "^2.4.0",
-    "winston-mongodb": "^3.0.0"
+    "winston-mongodb": "^3.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
